--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
+$Id: TODO,v 1.2 2001/08/30 05:50:33 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -13,7 +14,8 @@ TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
 
 /*
  *  どーでもいーんですが、Cソース中、
- *  このファイルだけEUCですな(藁
+ *  read2ch.hだけEUCですな(藁
+ *  ソースのdiff取るときにちょっと悲しいことが起きてしまう。
  *  どうしよ。個人的には全部EUCにできるなら
  *  したいところではある。(6411)
  */
