--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.2 2001/08/30 05:50:33 2ch Exp $
+$Id: TODO,v 1.3 2001/08/30 05:54:50 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -8,6 +8,12 @@ $Id: TODO,v 1.2 2001/08/30 05:50:33 2ch Exp $
 				- * -
 
 TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
+(6411)
+
+もうみんな知ってるとは思うけど、
+M-x c-set-style linux
+のスタイルが、現行のソースにいちばん合ってると
+おもう。ちなみに漏れのデフォルトは gnu (鬱
 (6411)
 
 				- * -
