--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.3 2001/08/30 05:54:50 2ch Exp $
+$Id: TODO,v 1.4 2001/08/30 06:07:30 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -14,6 +14,26 @@ TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
 M-x c-set-style linux
 のスタイルが、現行のソースにいちばん合ってると
 おもう。ちなみに漏れのデフォルトは gnu (鬱
+(6411)
+
+				- * -
+
+【後始末に関して】
+
+ちょっと行儀悪いんだけど、グローバルヒープはいちいちfree()すると、効率
+悪いと思う。対話型でも常駐サービスでもないCGIは、資源の開放はみーんな
+カーネルに任せてしまってもいいんではないか? と漏れ的には思う。ちなみに
+プロセス終了時、malloc()した空間をfree()してるわけではない。brkした部
+分を関知せず、プロセスごと捨ててるハズ。
+
+殊にmunmap(2)は、PTEの解放を伴うため、TLBがフラッシュされる。プロセス
+実行中にこれを行うのは、SMPシステムの場合は決して軽い処理ではない。な
+ので、mmap(2)した領域は放ったらかしにしてるのだ。
+
+気持ち悪いとは思うんだが、速やかに処理を終えるべきCGIと割り切って、な
+るべく積極的に後始末をサボりたいんだが、どうだろう? って話題はちょっと
+前にprog板にスレ立ってたような気もしたーり。
+
 (6411)
 
 				- * -
