--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.4 2001/08/30 06:07:30 2ch Exp $
+$Id: TODO,v 1.5 2001/08/30 09:54:47 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -14,6 +14,29 @@ TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
 M-x c-set-style linux
 のスタイルが、現行のソースにいちばん合ってると
 おもう。ちなみに漏れのデフォルトは gnu (鬱
+(6411)
+
+				- * -
+
+【部分取得とLast-Modifiedについて】
+
+現在、Last-Modified(以降L-M)は、.datから取得しているが、chunk取得して
+いる現状にそぐわないと考える。ただ、現状では、ファイルをナメてから
+L-Mを求めるのは難しそうなので…どうしよう。
+
+(6411)
+
+				- * -
+
+【板ダイジェストとLast-Modifiedについて】
+
+現在の実装では、/board/subject.txt のmtimeを返しているが、subject.txt 
+はsage進行の時は更新されないと思われるので、上位n個スレでsage進行が行
+われているとき、正しいものが取れなくなる可能性はある。
+
+本来ありぬべき動作は、最新10スレのmtimeのうち、最新のものを返す
+べきである。
+
 (6411)
 
 				- * -
@@ -45,3 +68,7 @@ M-x c-set-style linux
  *  どうしよ。個人的には全部EUCにできるなら
  *  したいところではある。(6411)
  */
+
+連絡先
+
+6411 mailto:webmaster@psychedance.com
