--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.5 2001/08/30 09:54:47 2ch Exp $
+$Id: TODO,v 1.6 2001/08/30 14:12:51 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -14,6 +14,9 @@ TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
 M-x c-set-style linux
 のスタイルが、現行のソースにいちばん合ってると
 おもう。ちなみに漏れのデフォルトは gnu (鬱
+(6411)
+
+板ダイジェストには、板毎ヘッドラインの差込が必要だな…
 (6411)
 
 				- * -
