--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.6 2001/08/30 14:12:51 2ch Exp $
+$Id: TODO,v 1.7 2001/08/30 14:43:22 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -9,12 +9,18 @@ $Id: TODO,v 1.6 2001/08/30 14:12:51 2ch Exp $
 
 TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
 (6411)
+↑自動生成されるものは.cvsignoreに書いて無視するのがいいと思います
+  # TAGS, *.oはデフォルトで無視されますが
+  (| --))
 
 もうみんな知ってるとは思うけど、
 M-x c-set-style linux
 のスタイルが、現行のソースにいちばん合ってると
 おもう。ちなみに漏れのデフォルトは gnu (鬱
 (6411)
+↑実は自分がそのスタイルだったり... linuxがスタイル一覧にないときは
+  (c-set-style "k&r") (setq c-basic-offset 8) してもよし。
+  (| --))
 
 板ダイジェストには、板毎ヘッドラインの差込が必要だな…
 (6411)
