--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.7 2001/08/30 14:43:22 2ch Exp $
+$Id: TODO,v 1.8 2001/08/30 14:46:47 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -12,6 +12,9 @@ TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
 ↑自動生成されるものは.cvsignoreに書いて無視するのがいいと思います
   # TAGS, *.oはデフォルトで無視されますが
   (| --))
+↑了解、リポジトリから落とします。
+漏れ流儀では、入れてたんで、思わずそうしてしまった。(6411)
+
 
 もうみんな知ってるとは思うけど、
 M-x c-set-style linux
