--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.8 2001/08/30 14:46:47 2ch Exp $
+$Id: TODO,v 1.9 2001/08/30 20:04:55 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -7,13 +7,15 @@ $Id: TODO,v 1.8 2001/08/30 14:46:47 2ch Exp $
 
 				- * -
 
-TAGSは不要かな? 他に要るという人がいなければリポジトリから削除するです。
+imode対応は、漏れ的に放置気味になってるんで、どなたか落ち穂拾いお願い
+するです。
 (6411)
-↑自動生成されるものは.cvsignoreに書いて無視するのがいいと思います
-  # TAGS, *.oはデフォルトで無視されますが
-  (| --))
-↑了解、リポジトリから落とします。
-漏れ流儀では、入れてたんで、思わずそうしてしまった。(6411)
+
+
+板ダイジェストには、板毎ヘッドラインの差込が必要だな…どこかに差込テキ
+ストの仕様、落ちてないかしら。意図的にbbs.cgi(と思われるもの)の参照を
+避けてるから…
+(6411)
 
 
 もうみんな知ってるとは思うけど、
@@ -24,9 +26,6 @@ M-x c-set-style linux
 ↑実は自分がそのスタイルだったり... linuxがスタイル一覧にないときは
   (c-set-style "k&r") (setq c-basic-offset 8) してもよし。
   (| --))
-
-板ダイジェストには、板毎ヘッドラインの差込が必要だな…
-(6411)
 
 				- * -
 
@@ -53,7 +52,7 @@ L-Mを求めるのは難しそうなので…どうしよう。
 
 				- * -
 
-【後始末に関して】
+【カーネル資源・プロセス資源の後始末に関して】
 
 ちょっと行儀悪いんだけど、グローバルヒープはいちいちfree()すると、効率
 悪いと思う。対話型でも常駐サービスでもないCGIは、資源の開放はみーんな
@@ -61,9 +60,14 @@ L-Mを求めるのは難しそうなので…どうしよう。
 プロセス終了時、malloc()した空間をfree()してるわけではない。brkした部
 分を関知せず、プロセスごと捨ててるハズ。
 
-殊にmunmap(2)は、PTEの解放を伴うため、TLBがフラッシュされる。プロセス
-実行中にこれを行うのは、SMPシステムの場合は決して軽い処理ではない。な
-ので、mmap(2)した領域は放ったらかしにしてるのだ。
+殊にmunmap(2)は、PTE(MMUのページテーブル)の解放を伴うため、TLB(MMUのペー
+ジキャッシュ)がフラッシュされる。プロセス実行中にこれを行うのは、SMPシ
+ステムの場合は決して軽い処理ではない。Linux-2.2だと、SMP周りは貧弱と認
+識してる。なので、mmap(2)した領域は放ったらかしにしてるのだ。
+
+XXX 詳しくは知らないんだけど、close(2)した後は、munmap()も一緒に行われ
+るんではないかな? だとしたら、read openしたfdは放置しといた方が結果的
+にベターかもしれぬ。どなたか突っ込み求む。
 
 気持ち悪いとは思うんだが、速やかに処理を終えるべきCGIと割り切って、な
 るべく積極的に後始末をサボりたいんだが、どうだろう? って話題はちょっと
