--- a/TODO
+++ b/TODO
@@ -1,11 +1,18 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.9 2001/08/30 20:04:55 2ch Exp $
+$Id: TODO,v 1.10 2001/08/31 07:34:05 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
 ・フォーマットは任意。
 
 				- * -
+
+なんてこったい、作ったばかりのサイズ0ファイルに対してmmap(2) したら、
+mmap自体は成功するが、指されてるポインタの先がまったくアクセス不能だい。
+1バイトでもあれば、1ページ分はアクセスできる模様。こんなときは、mmap失
+敗してくれよと思う響子の語呂。
+(6411)
+
 
 imode対応は、漏れ的に放置気味になってるんで、どなたか落ち穂拾いお願い
 するです。
