mmap(2)､ﾋｴﾘ､ｷ､ﾆ､ﾄ､鬢ﾄ､鮨､､ﾆ､ﾟ､ｿ｡｣ (6411)

--- a/TODO
+++ b/TODO
@@ -1,18 +1,11 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.10 2001/08/31 07:34:05 2ch Exp $
+$Id: TODO,v 1.11 2001/08/31 08:32:56 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
 ・フォーマットは任意。
 
 				- * -
-
-なんてこったい、作ったばかりのサイズ0ファイルに対してmmap(2) したら、
-mmap自体は成功するが、指されてるポインタの先がまったくアクセス不能だい。
-1バイトでもあれば、1ページ分はアクセスできる模様。こんなときは、mmap失
-敗してくれよと思う響子の語呂。
-(6411)
-
 
 imode対応は、漏れ的に放置気味になってるんで、どなたか落ち穂拾いお願い
 するです。
@@ -33,6 +26,32 @@ M-x c-set-style linux
 ↑実は自分がそのスタイルだったり... linuxがスタイル一覧にないときは
   (c-set-style "k&r") (setq c-basic-offset 8) してもよし。
   (| --))
+
+				- * -
+
+【mmap(2)教室】
+
+本格的にmmap(2) basedなコード書くのが初めてな漏れ。気づいたことを書くっ
+す。っていうかこれまで標準Cライブラリしか使ってなかったからのー。
+
+(6411)
+
+	* MAP_PRIVATEのときは、lengthで確保した領域は全部使用可能。た
+	  ぶん、元々のファイル長を超えた部分は0のはず。
+
+	* MAP_SHAREDのとき、length 0のファイルに対しては、mmap()が成功
+	  する。ただし、オフセット0 のアクセスすらsegmentation faultを
+	  起こす。
+
+	* MAP_SHAREDのとき、lengthを大きすぎる値を指定しても、ページ
+	  (x86では4096バイト)きっかりマッピングされ、それを超えたアク
+	  セスはsegmentation faultを受ける。
+
+	* もちろんmunmap(2)しなくても、close(2)しなくてもプロセス終了
+	  時までにメモリに書いた内容はファイルに反映される。
+
+	* munmap(2)しないでclose(2)した場合でも、マップ領域は有効のよ
+	  うだ。内部的実装では、mmap(2)のときに参照が増えてる?
 
 				- * -
 
