--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.11 2001/08/31 08:32:56 2ch Exp $
+$Id: TODO,v 1.12 2001/08/31 10:07:14 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -42,6 +42,9 @@ M-x c-set-style linux
 	* MAP_SHAREDのとき、length 0のファイルに対しては、mmap()が成功
 	  する。ただし、オフセット0 のアクセスすらsegmentation faultを
 	  起こす。
+	  ↑読み込み用にmapしてるんなら、ファイルサイズ分を超えての
+	  アクセスは常にまずいんでないかな? length=0なら当然先頭バイトは
+	  長さ1ないとありえない場所だし。
 
 	* MAP_SHAREDのとき、lengthを大きすぎる値を指定しても、ページ
 	  (x86では4096バイト)きっかりマッピングされ、それを超えたアク
