--- a/TODO
+++ b/TODO
@@ -1,11 +1,17 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.12 2001/08/31 10:07:14 2ch Exp $
+$Id: TODO,v 1.13 2001/08/31 10:23:08 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
 ・フォーマットは任意。
 
 				- * -
+
+dat形式はtime_tなので、内部で処理するときはtime_t(もしくはlong)に変換
+して持ち回ってもいいんじゃないかな? もちろん2038年問題は忘れてる。そも
+そも2chが9月を超えて持つのか?
+(6411)
+
 
 imode対応は、漏れ的に放置気味になってるんで、どなたか落ち穂拾いお願い
 するです。
@@ -45,6 +51,10 @@ M-x c-set-style linux
 	  ↑読み込み用にmapしてるんなら、ファイルサイズ分を超えての
 	  アクセスは常にまずいんでないかな? length=0なら当然先頭バイトは
 	  長さ1ないとありえない場所だし。
+	  ↑なるほど、「アクセスできないアドレスを返す」ってのはそれは
+	  それで直交性がある、と解釈するのね。ちなみに長さ1のファイル
+	  に対しては、1ページ分読み書きできるようだ。もちろん1を超えた
+	  領域への書き込みは捨てられるけど。(6411)
 
 	* MAP_SHAREDのとき、lengthを大きすぎる値を指定しても、ページ
 	  (x86では4096バイト)きっかりマッピングされ、それを超えたアク
