--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.13 2001/08/31 10:23:08 2ch Exp $
+$Id: TODO,v 1.14 2001/08/31 10:27:58 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -55,6 +55,10 @@ M-x c-set-style linux
 	  それで直交性がある、と解釈するのね。ちなみに長さ1のファイル
 	  に対しては、1ページ分読み書きできるようだ。もちろん1を超えた
 	  領域への書き込みは捨てられるけど。(6411)
+	  ↑それはつまり、ページ単位で割り当てている点自体が実装上の
+	  都合であって、そのサイズを格納できる最小のページ数を割り当て
+	  ているんでしょう。ページサイズよりも細かい単位では、たまたま
+	  page faultを発生させられないというだけで。
 
 	* MAP_SHAREDのとき、lengthを大きすぎる値を指定しても、ページ
 	  (x86では4096バイト)きっかりマッピングされ、それを超えたアク
