--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.14 2001/08/31 10:27:58 2ch Exp $
+$Id: TODO,v 1.15 2001/08/31 14:48:04 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
@@ -69,6 +69,8 @@ M-x c-set-style linux
 
 	* munmap(2)しないでclose(2)した場合でも、マップ領域は有効のよ
 	  うだ。内部的実装では、mmap(2)のときに参照が増えてる?
+	  FreeBSDのman参照した限りでは、「close(2)してもunmapされない」
+	  と明記してあった。
 
 				- * -
 
@@ -87,6 +89,12 @@ L-Mを求めるのは難しそうなので…どうしよう。
 現在の実装では、/board/subject.txt のmtimeを返しているが、subject.txt 
 はsage進行の時は更新されないと思われるので、上位n個スレでsage進行が行
 われているとき、正しいものが取れなくなる可能性はある。
+
+| 新スクリプト(要するに今使っているbbs.cgi)では、 
+| sageレスも必ずレス数にカウントされるので、 
+| 並べ替えは起きないものの、subject.txtの更新は行われていると思われま
+| す。
+↑というタレコミがあった。
 
 本来ありぬべき動作は、最新10スレのmtimeのうち、最新のものを返す
 べきである。
