--- a/TODO
+++ b/TODO
@@ -1,11 +1,15 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.15 2001/08/31 14:48:04 2ch Exp $
+$Id: TODO,v 1.16 2001/09/02 14:32:53 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
 ・フォーマットは任意。
 
 				- * -
+
+誰か、rewrite_href(), rewrite_href2()の落ち穂拾い頼む。
+(6411)
+
 
 dat形式はtime_tなので、内部で処理するときはtime_t(もしくはlong)に変換
 して持ち回ってもいいんじゃないかな? もちろん2038年問題は忘れてる。そも
@@ -21,6 +25,9 @@ imode対応は、漏れ的に放置気味になってるんで、どなたか落ち穂拾いお願い
 板ダイジェストには、板毎ヘッドラインの差込が必要だな…どこかに差込テキ
 ストの仕様、落ちてないかしら。意図的にbbs.cgi(と思われるもの)の参照を
 避けてるから…
+(6411)
+↑いろんな設定ファイル・差込ファイルのありかがわかった。でも、やるだけ
+無駄になる可能性があるから、マターリ逝くよ…
 (6411)
 
 
@@ -119,6 +126,7 @@ L-Mを求めるのは難しそうなので…どうしよう。
 XXX 詳しくは知らないんだけど、close(2)した後は、munmap()も一緒に行われ
 るんではないかな? だとしたら、read openしたfdは放置しといた方が結果的
 にベターかもしれぬ。どなたか突っ込み求む。
+↑ウソ。少なくともFreeBSDでは、close(2)してもmunmap(2)されない。(6411)
 
 気持ち悪いとは思うんだが、速やかに処理を終えるべきCGIと割り切って、な
 るべく積極的に後始末をサボりたいんだが、どうだろう? って話題はちょっと
