--- a/TODO
+++ b/TODO
@@ -1,15 +1,11 @@
 (written in euc-jp-unix) -*-text-*-
-$Id: TODO,v 1.16 2001/09/02 14:32:53 2ch Exp $
+$Id: TODO,v 1.17 2001/09/04 08:21:35 2ch Exp $
 
 ・思いついたことを掻く。
 ・荒らし厳禁(ｗ
 ・フォーマットは任意。
 
 				- * -
-
-誰か、rewrite_href(), rewrite_href2()の落ち穂拾い頼む。
-(6411)
-
 
 dat形式はtime_tなので、内部で処理するときはtime_t(もしくはlong)に変換
 して持ち回ってもいいんじゃないかな? もちろん2038年問題は忘れてる。そも
@@ -41,6 +37,17 @@ M-x c-set-style linux
   (| --))
 
 				- * -
+
+【USE_INDEX メモ】
+
+まだあぼーんに対応していない。
+
+排他制御が実戦でマトモに動くかどうかは検証していない。
+
+まだ、十分な行インデクスを生成していない。生成させることは難しくない。
+
+(6411)
+
 
 【mmap(2)教室】
 
@@ -78,6 +85,11 @@ M-x c-set-style linux
 	  うだ。内部的実装では、mmap(2)のときに参照が増えてる?
 	  FreeBSDのman参照した限りでは、「close(2)してもunmapされない」
 	  と明記してあった。
+
+	* MAP_PRIVATEは、即座にcommitされるわけではないらしい。ページ
+	  に書き込みしない限り、共有イメージが見えてしまうので、走査し
+	  てる間に誰かがファイルをいじってしまったら、ちょっと鬱だ氏の
+	  う
 
 				- * -
 
