--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ tag:
 　フッタ部分にまたがるHTMLタグの修正
 　HEADリクエスト時に処理軽減
 　PREV_NEXT_ANCHORをCHUNK_ANCHORとRELOADLINKに強調させた
-　REFERDRES_SIMPLE追加
+　REFERDRES_SIMPLE, NO_LINK_URL_BUSY追加
 　USE_CSS追加
 　「名前」も削除(CUT_NAME_STRING)
 
