--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@ tag: HEAD
 　PREV_NEXT_ANCHOR有効時はi-mode版もリンクを「1-」「最新10」「次10」のように簡略化
 　i-mode版で不要な</dl>が出力されるバグを修正
 　PATH時に過去落ち/過去ログ倉庫へのリンクがおかしかったバグを修正
+　rawmode +リザルトでデータサイズに続けて "/上限サイズK"も出力するようにした
 
 
 tag: YAKIN20010919: 実験サーバ choco.2ch.net にて ver 5.22として採用。
