--- a/ChangeLog
+++ b/ChangeLog
@@ -19,6 +19,7 @@ tag: HEAD
 　i-mode版で不要な</dl>が出力されるバグを修正
 　PATH時に過去落ち/過去ログ倉庫へのリンクがおかしかったバグを修正
 　rawmode +リザルトでデータサイズに続けて "/上限サイズK"も出力するようにした
+　>>nnリンクを削除する場合に余分な"</a>"が残ってしまっていたバグ修正
 
 
 tag: YAKIN20010919: 実験サーバ choco.2ch.net にて ver 5.22として採用。
