--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 tag: HEAD
   imodeでPREV_NEXT_ANCHOR機能追加
+  ENGLISH condition 追加
+  CONFIG_TIMEZONE 追加("JST-9")
 
 
 tag: YAKIN20010922: 実験サーバ choco.2ch.net にて ver 5.23として採用。
