､隍ｱ､､､ﾊn､ﾐ､ｵ､ﾊ､､､隍ｦ､ﾋ can_simplehtml()､ﾋﾆ讀ﾊreturn true;､ｬ､｢､ﾃ､ｿ

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,8 @@ tag: HEAD
     設定にSETTINGファイルではなく、SPECIAL_SETTINGを利用する
   過去ログがkako/100/に入っている場合に対応
   gzip転送によるトラフィック削減を狙い、/boardname/?raw=0.0 でsubject.txtの転送ができるようにした
+  1を含む時にnを出さないように
+  単点簡易表示のREFERERチェックが無効になっていた
 
 
 tag: YAKIN20010922: 実験サーバ choco.2ch.net にて ver 5.23として採用。
