--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,12 @@ tag: HEAD
   rawモードでファイルサイズジャストの時にも
   Last-ModifiedとContent-Lengthを出すようにした。
   raw=.nnn形式のUAチェックを外した。
+  追加condition:
+    △WRITESTOP_FILESIZE 「大きすぎます」が近付いた時スレッドストップ扱いする
+  削除condition:
+    USE_PATH
+    ALWAYS_PATH
+    bbs.cgiの採用により、ON固定
 
 
 tag: YAKIN20010925: 実験サーバ choco.2ch.net にて ver 5.24として採用。
