--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,7 @@ tag: HEAD
     USE_PATH
     ALWAYS_PATH
     bbs.cgiの採用により、ON固定
+  User-Agentを見て携帯と判定したら自動的に初期値としてimode=trueと見なすようにした。
 
 
 tag: YAKIN20010925: 実験サーバ choco.2ch.net にて ver 5.24として採用。
