--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@ tag: HEAD
 
   IEで問題が出たため、文字コードE0hの文字をSJIS1バイト目と判定するようにした。
   geturltaillenでのURL終端判定に &gt; と &lt; を追加した
+  1の本文に>>数字 でない<a href>リンクが本文中に含まれていた場合にタイトルがおかくなっていたバグ修正
 
 
 tal: YAKIN20011012: 実験サーバ choco.2ch.net にて ver 5.25として採用。
