ChangeLog､ﾎ1ｹﾔ､ﾀ､ｱsjis､ﾋ､ﾊ､ﾃ､ﾆ､､､ｿ､ﾎ､ﾇeuc､ﾋｽ､ﾀｵ

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@ tag: HEAD
   RAWOUT_MULTIдЄ╝┬┴їбг
   REFERDRES_SIMPLE╗■д╦baseе╪е├е└дм╜╨╬╧д╡дьд╩ддд┐дсбвsimpleд╩╔╜╝идм╡ь╖┴╝░д╟╣╘дядьд┐д╚днд╦
 д╜д│длдщд╬ >>n еъеєепд╬┤Ё╜рдмдкдлд╖дпд╩д├д╞ддд┐bug fix.
-  GetString()ВкИ°РФВЁГNГКГAВ╡В╚ВвВцВдВ╔ПCР│БB
+  GetString()дм░·┐ЇдЄепеъевд╖д╩дддшджд╦╜д└╡бг
 
 
 tag: YAKIN20011021: ╝┬╕│е╡б╝е╨ choco.2ch.net дкдшд╙ piza, teri2 д╦д╞ ver 5.26д╚д╖д╞║╬═╤бг
