--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,10 @@ tag: HEAD
   REFERDRES_SIMPLE時にbaseヘッダが出力されないため、simpleな表示が旧形式で行われたときに
 そこからの >>n リンクの基準がおかしくなっていたbug fix.
   GetString()が引数をクリアしないように修正。
+  通常モード時、カンマで区切ることで複数レスを表示できるようにした。ただし連続していない
+範囲は先頭から20個までのみ認識する。
+    例) read.cgi/board/9999999999/1-3,5,7,20,900-i
+  rawモードでは上下限のみ認識する。(上の例だと全レスということになる)
 
 
 tag: YAKIN20011021: 実験サーバ choco.2ch.net および piza, teri2 にて ver 5.26として採用。
